[gd_scene load_steps=4 format=4 uid="uid://djhyng4352ba0"]

[ext_resource type="Script" path="res://src/World/Menus/Scripts/score_scene.gd" id="1_rlow4"]
[ext_resource type="TileSet" uid="uid://ccwxj8515lbkj" path="res://Assets/Terrain/world_tile_set.tres" id="1_tkgts"]
[ext_resource type="LabelSettings" uid="uid://c4sgu33wpjoen" path="res://Assets/Fonts/standard_font_settings.tres" id="2_sn1rm"]

[node name="score_scene" type="Node2D"]
script = ExtResource("1_rlow4")

[node name="background" type="Node2D" parent="."]

[node name="background" type="TileMapLayer" parent="background"]
tile_map_data = PackedByteArray("AAALAAkAAAAJAAIAAAALAAgAAAAJAAIAAAALAAcAAAAJAAIAAAALAAYAAAAJAAIAAAALAAUAAAAJAAIAAAALAAQAAAALAAQAAAALAAIAAAAOAAQAAAALAAEAAAAOAAQAAAALAAAAAAAOAAQAAAALAP//AAAOAAQAAAAKAAkAAAALAAAAAAAKAAgAAAAJAAQAAAAKAAcAAAAJAAQAAAAKAAYAAAAJAAQAAAAKAAUAAAAJAAQAAAAKAAQAAAAJAAQAAAAKAAIAAAAOAAQAAAAKAAEAAAAOAAQAAAAKAAAAAAAOAAQAAAAKAP//AAAOAAQAAAAJAAkAAAALAAAAAAAJAAgAAAAJAAQAAAAJAAcAAAAJAAQAAAAJAAYAAAAJAAQAAAAJAAUAAAAJAAQAAAAJAAQAAAAJAAQAAAAJAAIAAAAOAAQAAAAJAAEAAAAOAAQAAAAJAAAAAAAOAAQAAAAJAP//AAAOAAQAAAAIAAkAAAALAAAAAAAIAAgAAAAJAAQAAAAIAAcAAAAJAAQAAAAIAAYAAAAJAAQAAAAIAAUAAAAJAAQAAAAIAAQAAAAJAAQAAAAIAAIAAAAOAAQAAAAIAAEAAAAOAAQAAAAIAAAAAAAOAAQAAAAIAP//AAAOAAQAAAAHAAkAAAALAAAAAAAHAAgAAAAJAAQAAAAHAAcAAAAJAAQAAAAHAAYAAAAJAAQAAAAHAAUAAAAJAAQAAAAHAAQAAAAJAAQAAAAHAAIAAAAOAAQAAAAHAAEAAAAOAAQAAAAHAAAAAAAOAAQAAAAHAP//AAAOAAQAAAAGAAkAAAALAAAAAAAGAAgAAAAJAAQAAAAGAAcAAAAJAAQAAAAGAAYAAAAJAAQAAAAGAAUAAAAJAAQAAAAGAAQAAAANAAIAAAAGAAIAAAAOAAQAAAAGAAEAAAAOAAQAAAAGAAAAAAAOAAQAAAAGAP//AAAOAAQAAAAFAAkAAAALAAAAAAAFAAgAAAAJAAQAAAAFAAcAAAAJAAQAAAAFAAYAAAAJAAQAAAAFAAUAAAALAAQAAAAFAAIAAAAOAAQAAAAFAAEAAAAOAAQAAAAFAAAAAAAOAAQAAAAFAP//AAAOAAQAAAAEAAkAAAALAAAAAAAEAAgAAAAJAAQAAAAEAAcAAAAJAAQAAAAEAAYAAAAJAAQAAAAEAAUAAAANAAIAAAAEAAMAAAAOAAQAAAAEAAIAAAAOAAQAAAAEAAEAAAAOAAQAAAAEAAAAAAAOAAQAAAAEAP//AAAOAAQAAAADAAkAAAALAAAAAAADAAgAAAAJAAQAAAADAAcAAAAJAAQAAAADAAYAAAALAAQAAAADAAMAAAAOAAQAAAADAAIAAAAOAAQAAAADAAEAAAAOAAQAAAADAAAAAAAOAAQAAAADAP//AAAOAAQAAAACAAkAAAALAAAAAAACAAgAAAAJAAQAAAACAAcAAAAJAAQAAAACAAYAAAANAAIAAAACAAQAAAAOAAQAAAACAAMAAAAOAAQAAAACAAIAAAAOAAQAAAACAAEAAAAOAAQAAAACAAAAAAAOAAQAAAACAP//AAAOAAQAAAABAAkAAAALAAAAAAABAAgAAAAJAAQAAAABAAcAAAANAAIAAAABAAQAAAAOAAQAAAABAAMAAAAOAAQAAAABAAIAAAAOAAQAAAABAAEAAAAOAAQAAAABAAAAAAAOAAQAAAABAP//AAAOAAQAAAAAAAkAAAALAAAAAAAAAAgAAAALAAQAAAAAAAUAAAAOAAQAAAAAAAQAAAAOAAQAAAAAAAMAAAAOAAQAAAAAAAIAAAAOAAQAAAAAAAEAAAAOAAQAAAAAAAAAAAAOAAQAAAAAAP//AAAOAAQAAAD//wkAAAALAAAAAAD//wgAAAAJAAQAAAD//wYAAAAOAAQAAAD//wUAAAAOAAQAAAD//wQAAAAOAAQAAAD//wMAAAAOAAQAAAD//wIAAAAOAAQAAAD//wEAAAAOAAQAAAD//wAAAAAOAAQAAAD/////AAAOAAQAAAD+/wkAAAALAAAAAAD+/wgAAAANAAIAAAD+/wYAAAAOAAQAAAD+/wUAAAAOAAQAAAD+/wQAAAAOAAQAAAD+/wMAAAAOAAQAAAD+/wIAAAAOAAQAAAD+/wEAAAAOAAQAAAD+/wAAAAAOAAQAAAD+////AAAOAAQAAAAMAAQAAAALAAQAAAANAAQAAAALAAQAAAAOAAQAAAALAAQAAAAPAAQAAAAJAAIAAAD+/wcAAAAPAAEAAAD//wcAAAAQAAEAAAAAAAcAAAAMAAMAAAAAAAYAAAAPAAEAAAABAAYAAAAMAAMAAAABAAUAAAAPAAEAAAACAAUAAAALAAMAAAADAAUAAAAMAAMAAAADAAQAAAAPAAEAAAAEAAQAAAAQAAEAAAAFAAQAAAAMAAMAAAAFAAMAAAAPAAEAAAAGAAMAAAALAAMAAAAHAAMAAAAQAAEAAAAIAAMAAAALAAMAAAAJAAMAAAAQAAEAAAAKAAMAAAALAAMAAAALAAMAAAARAAEAAAA=")
tile_set = ExtResource("1_tkgts")

[node name="pipes" type="TileMapLayer" parent="background"]
tile_map_data = PackedByteArray("AAAAAAQAAAADAAEAAAABAAQAAAABAAAAAAACAAQAAAABAAAAAAADAAQAAAABAAIAAAAEAAQAAAABAAIAAAAFAAQAAAABAAAAAAAGAAQAAAABAAAAAAAHAAQAAAABAAAAAAAIAAQAAAABAAIAAAAJAAQAAAAFAAEAAAAAAAUAAAACAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAIAAAABAAcAAAABAAIAAAACAAcAAAABAAIAAAADAAcAAAABAAAAAAAEAAcAAAABAAIAAAAFAAcAAAABAAIAAAAGAAcAAAABAAAAAAAHAAcAAAABAAIAAAAIAAcAAAABAAIAAAAJAAcAAAACAAIAAAAJAAYAAAAAAAEAAAAJAAUAAAACAAEAAAAJAAMAAAAAAAEAAAAJAAIAAAAAAAEAAAAJAAEAAAAAAAEAAAAJAAAAAAACAAAAAAAIAAAAAAABAAAAAAAHAAAAAAABAAAAAAAGAAAAAAABAAAAAAAFAAAAAAABAAIAAAAEAAAAAAABAAIAAAADAAAAAAABAAAAAAACAAAAAAABAAIAAAABAAAAAAABAAIAAAAAAAAAAAAAAAAAAAAAAAEAAAACAAEAAAAAAAIAAAACAAEAAAAAAAMAAAAAAAEAAAA=")
tile_set = ExtResource("1_tkgts")

[node name="text" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 88.0
offset_bottom = 117.0
text = "Remaining
Time:
previous
Score:

new
Score:"
label_settings = ExtResource("2_sn1rm")

[node name="remaining_time" type="Label" parent="."]
offset_left = 104.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 39.0
text = "
000"
label_settings = ExtResource("2_sn1rm")

[node name="previous_score" type="Label" parent="."]
offset_left = 104.0
offset_top = 40.0
offset_right = 144.0
offset_bottom = 63.0
text = "
000"
label_settings = ExtResource("2_sn1rm")

[node name="new_score" type="Label" parent="."]
offset_left = 104.0
offset_top = 80.0
offset_right = 144.0
offset_bottom = 103.0
text = "
000"
label_settings = ExtResource("2_sn1rm")
